<resources>
    <string name="app_name">Leandro_Barbosa_AT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Status</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="historia">Voce é um pequeno aventureiro, que mora em Clamire no reino de Kaliatar, voce deseja ser um grande aventureiro, ficar mais forte e derrubar
        o rei de Kaliatar, o motivo disso tudo? Bem, digamos que a vila em que nasceu sofre uma forte opressão do rei e seu desejo e derruba-lo para libertar seu povo,
        isso o leva ate a escola de caveliros Hall of Valhalla, uma das melhores escolas de cavaleiros templarios do reino, mas o caminho até la e devasto de desafios
        não achou quer seria tao facil ne? a escola fica situada numa região repleta de monstros então nada mais justo que os sobreviventes que chegarem até a escola
        sejam recrutados, bem seu objetivo nada mais simples do que chegar ate a escola vivo monstro mesmo que seja por um fio e com a cabeça de algum monstro. Boa sorte
    </string>
    <string name="primeiroEvento"> Voce tem uma pequena armadura de couro batido, com uma espada leve de uma mão feita de aluminio e um pequeno escudo de madeira
        revestido de um pouco de metal, são 4 dias ate chegar na escola,  o 1 dia voce não enfrenta nenhum problema na floresta entao decide descansar, contudo
        logo na manhã seguinte voce percebe algumas pegadas estranhas, mas segue em frente com cuidado, apos algumas horas voce vê um monstro branco, com grandes olhos
        vermelhos e uma pupila de cor um tanto quanto duvidosa, com o corpo todo errugado como a de um velho e pequenas garras.

        Sem muita experiencia voce decide partir para cima... qual escolha voce vai eleger?

    </string>
    <string name="guerreiro">guerreiro</string>
    <string name="Rbescolha1">Correr em sua direção e acerta-lo com o escudo</string>
    <string name="Rbescolha2">fazer um corte na vertical em suas pernas para imobiliza-lo</string>
    <string name="btnavancar">Avançar</string>
    <string name="btnVoltar">Voltar</string>
    <string name="btnRecomecar">Recomeçar</string>
    <string name="btnJogar">Começar a Jogar</string>
    <string name="suaVida">Sua vida</string>
    <string name="status">status</string>
    <string name="valor_status">status</string>

</resources>
